# home-city-recommendation-system

./: .gitignore  README.md  main.py  pyproject.toml
data/raw/: DIM_CATEGORY.csv  DIM_CUSTOMER.csv  DIM_DATE.csv  DIM_PAYMENT.csv  DIM_PRODUCT.csv  DIM_SHIPPING.csv  FACT_ORDER_LINE.csv
src/data_pipelines/: snowflake_client.py
