[project]
name = "home-city-recommendation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "snowflake-connector-python>=4.4.0",
    "upstash-redis>=1.7.0",
    "uvicorn[standard]>=0.44.0",
]
